--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Survey Form</title>
 </head>
-<body>
-    
+<header> <h1>id="title" Survey Form</h1></header>
+<body id="description">
+<input type="text">
+<input type="">
 </body>
 </html>
